# universal-search

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .golangci.yml  .goreleaser.yml  .gosec.yml  .mcp.json  .pre-commit-config.yaml  .prettierignore  .semgrepignore  .trivyignore  CHANGELOG.md  CLAUDE.md  Dockerfile.docs  LICENSE  MIGRATION.md  Makefile  NOTICE  QUICKSTART.md  README.md  RELEASE.md  SECURITY.md  USAGE.md  go.mod  go.sum  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  renovate.json
.claude/: settings.json
.github/: CODEOWNERS
.github/workflows/: build-images.yml  chart-ci.yml  chart-release.yml  compose-check.yml  deps-audit.yml  docs.yml  eval-ko.yml  eval-nightly.yml  eval.yml  go-ci.yml  go.yml  pre-commit-autoupdate.yml  pre-commit.yml  promtool-validate.yml  python-ci.yml  python.yml  release.yml  security.yml  web.yml
.moai/: manifest.json
.moai/eval/: README.md
.moai/project/: product.md  research.md  roadmap.md  structure.md  tech.md
.moai/reports/: session-2f8f3ca6-bd47-4939-9c4a-bc91b013c1f3.md  session-64dd6bff-8ae2-49d0-9105-9dad40cc042a.md  session-bb620078-9f5b-4fb1-b98b-a2407f4534c3.md  session-bcf30c1b-91d2-4238-b17d-50d2d1674cd0.md  session-ecbac195-e99c-43db-b273-2e9ccd07b41d.md  sync-report-20260507-061627.md  sync-report-DEPLOY-001.md  sync-report-DOC-001.md  sync-report-DOC-002.md  sync-report-EVAL-001.md  sync-report-EVAL-002.md  sync-report-REL-001.md  sync-report-SEC-001.md
.moai/state/: session-memo.md
.planning/: AUDIT-FINDINGS.md  PORT-PLAN-2026-06-17.md  UNIMPL-SPEC-REQUIREMENTS.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
_not-found/: __next._head.txt  __next._not-found.__PAGE__.txt  __next._tree.txt  index.html  index.txt
charts/universal-search/: .helmignore  CHANGELOG.md  Chart.yaml  README.md  values-dev.yaml  values-prod.yaml  values.schema.json  values.yaml
cmd/eval/: main.go  main_test.go
cmd/usearch/: config_cmd.go  config_cmd_test.go  coverage_supplement_test.go  deep_cmd.go  deep_cmd_test.go  exitcode.go  exitcode_test.go  format_markdown.go  format_markdown_test.go  history_cmd.go  history_cmd_test.go  integration_test.go  login_cmd.go  login_cmd_test.go  main.go  main_test.go  output_json.go  output_json_test.go  output_text.go  output_text_test.go  progress.go  progress_test.go  query.go  query_response.go  query_test.go  repl.go  repl_test.go  root.go  sources_cmd.go  sources_cmd_test.go
cmd/usearch-api/: api_handlers.go  api_handlers_test.go  main.go
cmd/usearch-mcp/: main.go  main_test.go  registry_test.go
cmd/usearch-migrate/: main.go
deploy/: Dockerfile.usearch-api  Dockerfile.usearch-mcp  Dockerfile.usearch-migrate  compose_test.go  docker-compose.gpu.yml  docker-compose.yml
deploy/alertmanager/: alertmanager.yml
deploy/litellm/: config.yaml
docs/: .gitignore  MIGRATION_MAP.md  README.md  _deps-compose-table.md  _deps-header.md  dependencies.md  lychee.toml  mdx-components.tsx  next.config.mjs  package.json  pnpm-lock.yaml  theme.config.tsx  tsconfig.json
en/: __next.$d$lang.$oc$mdxPath.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._tree.txt  index.html
ko/: __next.$d$lang.$oc$mdxPath.__PAGE__.txt  __next._head.txt  __next._tree.txt  index.html  index.txt
scripts/: check-adapter-page-completeness.sh  check-doc-credentials.sh  check-env-example.sh  check-license-allowlist.sh  check-no-secret-logs.sh  check-vuln-exceptions.sh  compose-chart-parity.sh  gen-adapter-reference.sh  gen-deps-manifest.sh  makefile_test.sh  run-eslint-web.sh  usearch-cli.sh
services/embedder/: .env.example  Dockerfile  README.md  pyproject.toml
services/embedder/src/embedder/: __init__.py  __main__.py  app.py  cache.py  embed.py  main.py  models.py  obs.py  service.py
services/embedder/tests/: conftest.py  test_app.py  test_cache.py  test_embed.py  test_health.py  test_latency.py  test_memory.py  test_models.py  test_obs.py  test_throughput.py  test_version.py
services/koreanews/: Dockerfile  pyproject.toml
services/koreanews/src/: main.py
services/koreanews/tests/: test_stub.py
services/researcher/: .env.example  Dockerfile  README.md  pyproject.toml
services/researcher/src/researcher/: __init__.py  __main__.py  app.py  deep_tree.py  eval_judge.py  faithfulness_endpoint.py  gateway.py  main.py  models.py  obs.py  service.py  synthesis.py
services/researcher/tests/: test_app.py  test_deep_tree.py  test_eval_judge.py  test_faithfulness_endpoint.py  test_gateway.py  test_health.py  test_obs.py  test_synthesis.py  test_version.py
services/storm/: .env.example  Dockerfile  README.md  pyproject.toml
services/storm/src/storm/: __init__.py  __main__.py  app.py  citation_translator.py  faithfulness.py  gateway.py  inject_rm.py  main.py  models.py  obs.py  pipeline.py  service.py
services/storm/tests/: test_app.py  test_caps.py  test_citation_translator.py  test_faithfulness.py  test_gateway.py  test_health.py  test_inject_rm.py  test_main.py  test_models.py  test_obs.py  test_pipeline.py  test_version.py
services/tokenizer-ko/: Dockerfile  pyproject.toml
services/tokenizer-ko/src/tokenizer_ko/: __init__.py  __main__.py  app.py  models.py  obs.py  tokenize.py
services/tokenizer-ko/tests/: test_app.py  test_obs.py  test_throughput.py  test_tokenize.py
services/tokenizer-ko/tests/fixtures/: golden_morphemes.json
services/youtube-extract/: .env.example  Dockerfile  README.md  pyproject.toml
services/youtube-extract/src/youtube_extract/: __init__.py  __main__.py  app.py  models.py  ytdlp_runner.py
services/youtube-extract/tests/: conftest.py  test_app.py  test_models.py  test_ytdlp_runner.py
services/youtube-extract/tests/fixtures/: search_response_partial_error.json  search_response_rate_limit.json  search_response_signed_in_challenge.json
tests/: spec_dep_001_test.go
web/: README.md  eslint.config.mjs  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
(+1978 files in other folders)
