[project]
name = "universal-search-workspace"
version = "0.0.1-dev"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["services/*"]

[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27", "ruff>=0.4"]

[tool.pytest.ini_options]
testpaths = ["services", "tests"]
pythonpath = ["tests"]
addopts = "--import-mode=importlib"
