[project]
name = "embedder"
version = "0.0.1-dev"
description = "Embedding sidecar service — FastAPI wrapper for dense and sparse embedding generation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx", "ruff"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
