[project]
name = "researcher"
version = "0.1.0"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "httpx>=0.27",
    "openai>=1.50",
    # SPEC-EVAL-001 REQ-EVAL1-004: DeepEval FaithfulnessMetric judge.
    # Compatible-release pin (~=) allows patch upgrades without breaking changes.
    "deepeval~=1.0",
    # SPEC-DEEP-003a REQ-DEEP3a-301: third-tier LLM JSON repair parser.
    # Bounded range caps recovery-shape drift (OQ-1/OQ-4); validated against 0.61.0.
    "json-repair>=0.61,<1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "hypothesis>=6",
    "pip-audit>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/researcher"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
# Disable deepeval's auto-loaded pytest11 plugin (entry-point name "plugins").
# It imports langchain.schema at load time, which langchain 1.x removed (moved to
# langchain_core), crashing collection. Our tests use injectable/lazy judges and
# never need deepeval's assert_test plugin. Drop this once deepeval is bumped to a
# langchain-1.x-compatible release.
addopts = "-p no:plugins"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
